--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,22 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.2.5",
+    "php": "^8.0",
     "ext-pdo": "*",
-    "avto-dev/roadrunner-laravel": "^3.1",
-    "fideloper/proxy": "^4.2",
-    "fruitcake/laravel-cors": "^1.0",
-    "guzzlehttp/guzzle": "^6.3",
-    "laravel/framework": "^7.0",
-    "laravel/tinker": "^2.0",
-    "laravel/ui": "^2.0",
-    "league/uri": "^6.2",
-    "livewire/livewire": "^1.0",
-    "marcin-orlowski/laravel-api-response-builder": "^7.1",
-    "myclabs/php-enum": "^1.7",
-    "spatie/data-transfer-object": "^1.13",
-    "symfony/css-selector": "^5.0",
-    "symfony/dom-crawler": "^5.0",
+    "spiral/roadrunner-laravel": "^4.0",
+    "fideloper/proxy": "^4.3",
+    "fruitcake/laravel-cors": "^2.0.2",
+    "guzzlehttp/guzzle": "^7.3.0",
+    "laravel/framework": "^8.37.0",
+    "laravel/tinker": "^v2.6.1",
+    "laravel/ui": "^3.0",
+    "league/uri": "^6.4.0",
+    "livewire/livewire": "^v2.4.3",
+    "marcin-orlowski/laravel-api-response-builder": "^9.2.2",
+    "myclabs/php-enum": "^1.8.0",
+    "spatie/data-transfer-object": "^3.0.4",
+    "symfony/css-selector": "^v5.2.4",
+    "symfony/dom-crawler": "^v5.2.4",
     "ext-dom": "*",
     "ext-json": "*"
   },
